--- a/usuario/templates/categoria/categoria_form.html
+++ b/usuario/templates/categoria/categoria_form.html
@@ -1,6 +1,6 @@
-{% extends "./base.html" %}
+{% extends "usuario/base.html" %}
 
-{% block tittle %} Añadir/Editar Categoría {% endblock %}
+{% block title %} Añadir/Editar Categoría {% endblock %}
 
 {% block body %}
 <div class="row">
