--- a/usuario/templates/categoria/categoria_list.html
+++ b/usuario/templates/categoria/categoria_list.html
@@ -1,6 +1,6 @@
-{% extends "./base.html" %}
+{% extends "usuario/base.html" %}
 
-{% block tittle %} Categorías {% endblock %}
+{% block title %} Categorías {% endblock %}
 
 {% block body %}
 <div class="row">
