--- a/usuario/templates/precio/precio_list.html
+++ b/usuario/templates/precio/precio_list.html
@@ -1,6 +1,6 @@
-{% extends "./base.html" %}
+{% extends "usuario/base.html" %}
 
-{% block tittle %} Precios {% endblock %}
+{% block title %} Precios {% endblock %}
 
 {% block body %}
 <div class="row">
