--- a/usuario/templates/supermercado/supermercado_list.html
+++ b/usuario/templates/supermercado/supermercado_list.html
@@ -1,6 +1,6 @@
-{% extends "./base.html" %}
+{% extends "usuario/base.html" %}
 
-{% block tittle %} Supermercados {% endblock %}
+{% block title %} Supermercados {% endblock %}
 
 {% block body %}
 <div class="row">
