--- a/usuario/templates/precio/precio_confirm_delete.html
+++ b/usuario/templates/precio/precio_confirm_delete.html
@@ -1,6 +1,6 @@
-{% extends "./base.html" %}
+{% extends "usuario/base.html" %}
 
-{% block tittle %} Confirmar Eliminación {% endblock %}
+{% block title %} Confirmar Eliminación {% endblock %}
 
 {% block body %}
 <div class="row">
