--- a/usuario/templates/usuario/Pagina1.html
+++ b/usuario/templates/usuario/Pagina1.html
@@ -173,7 +173,7 @@
         <img src="{% static 'usuario/img/verduras.jpg' %}" class="card-img-top" alt="Verduras" width="150" height="150">
         <div class="card-body">
           <h5 class="card-title text-primary">Verduras</h5>
-          <p class="card-text">Descubre la frescura y calidad de nuestras verduras en oferta. Lleva a tu mesa lo mejor de la naturaleza y disfruta de una alimentación saludable y deliciosa con precios que no te puedes perder.</p>
+          <p class="card-text">Deléitate con la frescura y calidad excepcional de nuestras verduras frescas en oferta. Llena tu mesa de sabor y salud con los mejores productos de la naturaleza a precios irresistibles.</p>
           <a href="{% url 'Pagina2' %}" type="button" class="btn btn-primary">Ir a ver</a>
         </div>
       </div>
@@ -183,7 +183,7 @@
         <img src="{% static 'usuario/img/Frutas.jpg' %}" class="card-img-top" alt="Frutas" width="150" height="150">
         <div class="card-body">
           <h5 class="card-title text-success">Frutas</h5>
-          <p class="card-text">Explora una explosión de sabores y colores en nuestra sección de frutas. Desde jugosas manzanas hasta exóticas frutas tropicales, encuentra las mejores ofertas y lleva a casa la frescura y el sabor en cada bocado.</p>
+          <p class="card-text">Descubre un mundo de sabores y colores en nuestra sección de frutas. Desde las clásicas hasta las exóticas, encuentra ofertas increíbles en frutas frescas y deliciosas para disfrutar en cada bocado.</p>
           <a href="{% url 'Pagina3' %}" type="button" class="btn btn-success">Ir a ver</a>
         </div>
       </div>
@@ -193,7 +193,7 @@
         <img src="{% static 'usuario/img/carne vacuno los tineos.jpg' %}" class="card-img-top" alt="Carnes" width="150" height="150">
         <div class="card-body">
           <h5 class="card-title text-danger">Carnes</h5>
-          <p class="card-text">Encuentra las ofertas más tentadoras en una variedad de carnes frescas y preparadas para satisfacer todos tus antojos culinarios y elevar tus comidas a otro nivel.</p>
+          <p class="card-text">Disfruta de irresistibles ofertas en carnes frescas y preparadas para satisfacer tus antojos. Encuentra todo lo que necesitas para crear platos deliciosos y elevar tus comidas a otro nivel.</p>
           <a href="{% url 'Pagina4' %}" type="button" class="btn btn-danger">Ir a ver</a>
         </div>
       </div>
@@ -203,7 +203,7 @@
         <img src="{% static 'usuario/img/Lacteos.jpg' %}" class="card-img-top" alt="Lacteos" width="150" height="150">
         <div class="card-body">
           <h5 class="card-title text-warning">Lácteos</h5>
-          <p class="card-text">Explora nuestra selección de lácteos frescos y deliciosos, desde cremosa leche hasta quesos artesanales. Encuentra los mejores precios en una variedad de productos lácteos que te ayudarán a crear platos deliciosos y nutritivos para toda la familia.</p>
+          <p class="card-text">Saborea la frescura de nuestros lácteos, desde leche cremosa hasta quesos artesanales. Descubre una amplia variedad de productos lácteos a precios increíbles para nutrir a tu familia con deliciosos y saludables platillos.</p>
           <a href="{% url 'Pagina5' %}" type="button" class="btn btn-warning">Ir a ver</a>
         </div>
       </div>
@@ -261,7 +261,9 @@
 
 <div class="a1">
   <a href="#openModal" type="button" class="btn btn-primary">contacto</a>
+  <a class="btn btn-primary" href="{% url 'producto1' %}">Admin</a>
 </div>
+
 
 <!-- Elemento para mostrar la fecha y hora -->
 <div id="currentDateTime"></div>
