--- a/usuario/templates/usuario/base.html
+++ b/usuario/templates/usuario/base.html
@@ -11,20 +11,20 @@
 
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">bajonea</a>
+          <a class="navbar-brand" href="{% url 'Pagina1' %}">bajonea</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">productos</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'producto1' %}">productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">home</a>
+                <a class="nav-link" href="{% url 'Pagina1' %}">home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">contacto</a>
+                <a class="nav-link" href="#openModal">contacto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">ola</a>
