--- a/usuario/templates/usuario/Pagina3.html
+++ b/usuario/templates/usuario/Pagina3.html
@@ -7,6 +7,31 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="{% static 'usuario/css/pagina1.css' %}">
   <title>Pagina3</title>
+  <style>
+    .carousel-item img {
+      border-radius: 15px;
+      object-fit: cover;
+      height: 400px;
+    }
+    .carousel-caption {
+      background: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .carousel-caption h5 {
+      font-size: 2rem;
+      color: #ffffff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    }
+    .carousel-caption p {
+      font-size: 1.25rem;
+      color: #ffffff;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    }
+    .carousel-indicators button {
+      background-color: #ffffff;
+    }
+  </style>
 </head>
 <style>
   .carousel-item img {
@@ -78,13 +103,10 @@
         $('.blink').toggleClass('blinking');
       }, 1000); // Cambia el intervalo de tiempo si deseas un parpadeo más rápido o lento
     });
-    </script>
+  </script>
 
   <!-- Formularios de Registro y Login -->
   <div class="container">
-
-  
-    <!-- Formularios de Registro y Login -->
     <div id="formulario-registro" style="display: none;">
       <h2>Registrarse</h2>
       <form action="{% url 'Pagina6' %}" method="post" onsubmit="return validarRegistro()">
@@ -112,7 +134,7 @@
         <button type="button" class="btn btn-secondary" onclick="cerrarFormularioRegistro()">Cerrar</button>
       </form>
     </div>
-  
+
     <div id="formulario-login" style="display: none;">
       <h2>Iniciar Sesión</h2>
       <form action="{% url 'Pagina6' %}" method="post" onsubmit="return validarLogin()">
@@ -129,6 +151,7 @@
       </form>
     </div>
   </div>
+
   <!-- Carrusel -->
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -140,7 +163,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <a href="{% url 'Pagina2' %}">
-          <img src="{% static 'usuario/img/cebollas 4.jpg' %}" class="d-block w-100" alt="Oferta1" height="400" style="border: 10px solid black;">
+          <img src="{% static 'usuario/img/cebollas 4.jpg' %}" class="d-block w-100" alt="Oferta1" style="border: 10px solid black;">
         </a>
         <div class="carousel-caption d-none d-md-block">
           <h5>Las mejores Cebollas a mejor precios</h5>
@@ -149,7 +172,7 @@
       </div>
       <div class="carousel-item">
         <a href="{% url 'Pagina3' %}">
-          <img src="{% static 'usuario/img/platano 5.jpg' %}" class="d-block w-100" alt="Oferta2" height="400" style="border: 10px solid black;">
+          <img src="{% static 'usuario/img/platano 5.jpg' %}" class="d-block w-100" alt="Oferta2" style="border: 10px solid black;">
         </a>
         <div class="carousel-caption d-none d-md-block">
           <h5>Las mejores Platanos a mejor precios</h5>
@@ -158,7 +181,7 @@
       </div>
       <div class="carousel-item">
         <a href="{% url 'Pagina4' %}">
-          <img src="{% static 'usuario/img/Carne vacuno 3.jpg' %}" class="d-block w-100" alt="Oferta3" height="400" style="border: 10px solid black;">
+          <img src="{% static 'usuario/img/Carne vacuno 3.jpg' %}" class="d-block w-100" alt="Oferta3" style="border: 10px solid black;">
         </a>
         <div class="carousel-caption d-none d-md-block">
           <h5>Las mejores Carnes a mejores precios</h5>
@@ -167,7 +190,7 @@
       </div>
       <div class="carousel-item">
         <a href="{% url 'Pagina5' %}">
-          <img src="{% static 'usuario/img/Lacteos.jpg' %}" class="d-block w-100" alt="Oferta4" height="400" style="border: 10px solid black;">
+          <img src="{% static 'usuario/img/Lacteos.jpg' %}" class="d-block w-100" alt="Oferta4" style="border: 10px solid black;">
         </a>
         <div class="carousel-caption d-none d-md-block">
           <h5>Las mejores Leches a mejor precios</h5>
@@ -185,16 +208,15 @@
     </button>
   </div>
 
-
   <script>
-  // Activar el deslizamiento automático cada 3 segundos
-  document.addEventListener('DOMContentLoaded', function () {
-    var myCarousel = document.querySelector('#carouselExampleCaptions');
-    var carousel = new bootstrap.Carousel(myCarousel, {
-      interval: 3000, // Intervalo de cambio en milisegundos (3segundos)
+    // Activar el deslizamiento automático cada 3 segundos
+    document.addEventListener('DOMContentLoaded', function () {
+      var myCarousel = document.querySelector('#carouselExampleCaptions');
+      var carousel = new bootstrap.Carousel(myCarousel, {
+        interval: 3000,
+      });
     });
-    });
-    </script>
+  </script>
 
   <br>
   <h1>FRUTAS</h1>
@@ -239,18 +261,16 @@
   </ul>
   <br>
 
+  <p id="bajonea">Tu bienestar es nuestra prioridad, por eso te ofrecemos información sobre las farmacias de turno en todo Chile.</p>
 
-  <p id="bajonea"> Tu bienestar es nuestra prioridad, por eso te ofrecemos información sobre las farmacias de turno en todo Chile.
-
-    <script>
-      $(document).ready(function() {
-        // Función para animar el párrafo al hacer clic en él
-        $('#bajonea').click(function() {
-          $(this).animate({ fontSize: '24px', opacity: '0.5' }, 'slow');
-        });
+  <script>
+    $(document).ready(function() {
+      // Función para animar el párrafo al hacer clic en él
+      $('#bajonea').click(function() {
+        $(this).animate({ fontSize: '24px', opacity: '0.5' }, 'slow');
       });
-    </script>
-  
+    });
+  </script>
 
   <!-- Sección de Farmacias -->
   <div class="farmacias-carousel" id="farmaciasCarousel"></div>
@@ -258,107 +278,110 @@
 
   <!-- Scripts para Formularios -->
   <script>
-  function mostrarFormularioRegistro() {
-    document.getElementById("formulario-registro").style.display = "flex"; /* Cambiar a flex para centrar verticalmente */
-    document.getElementById("formulario-login").style.display = "none";
-  }
+    function mostrarFormularioRegistro() {
+      document.getElementById("formulario-registro").style.display = "flex";
+      document.getElementById("formulario-login").style.display = "none";
+    }
 
-  function cerrarFormularioRegistro() {
-    document.getElementById("formulario-registro").style.display = "none";
-  }
+    function cerrarFormularioRegistro() {
+      document.getElementById("formulario-registro").style.display = "none";
+    }
 
-  function mostrarFormularioLogin() {
-    document.getElementById("formulario-login").style.display = "flex"; /* Cambiar a flex para centrar verticalmente */
-    document.getElementById("formulario-registro").style.display = "none";
-  }
+    function mostrarFormularioLogin() {
+      document.getElementById("formulario-login").style.display = "flex";
+      document.getElementById("formulario-registro").style.display = "none";
+    }
 
-  function cerrarFormularioLogin() {
-    document.getElementById("formulario-login").style.display = "none";
-  }
+    function cerrarFormularioLogin() {
+      document.getElementById("formulario-login").style.display = "none";
+    }
 
-function validarRegistro() {
-  var nombre = document.getElementById("nombre").value;
-  var email = document.getElementById("email").value;
-  var telefono = document.getElementById("telefono").value;
-  var contraseña = document.getElementById("contraseña").value;
-  var confirmar_contraseña = document.getElementById("confirmar_contraseña").value;
+    function validarRegistro() {
+      var nombre = document.getElementById("nombre").value;
+      var email = document.getElementById("email").value;
+      var telefono = document.getElementById("telefono").value;
+      var contraseña = document.getElementById("contraseña").value;
+      var confirmar_contraseña = document.getElementById("confirmar_contraseña").value;
 
-  // Verificar que todos los campos estén llenos
-  if (nombre === "" || email === "" || telefono === "" || contraseña === "" || confirmar_contraseña === "") {
-    alert("Por favor, llene todos los campos.");
-    return false;
-  }
+      // Verificar que todos los campos estén llenos
+      if (nombre === "" || email === "" || telefono === "" || contraseña === "" || confirmar_contraseña === "") {
+        alert("Por favor, llene todos los campos.");
+        return false;
+      }
 
-  // Validar que el teléfono solo contenga números y tenga una longitud mínima de 10 dígitos
-  var telefonoRegex = /^[0-9]{10,}$/;
-  if (!telefonoRegex.test(telefono)) {
-    alert("El teléfono debe contener solo números y tener al menos 10 dígitos.");
-    return false;
-  }
+      // Validar que el teléfono solo contenga números y tenga una longitud mínima de 10 dígitos
+      var telefonoRegex = /^[0-9]{10,}$/;
+      if (!telefonoRegex.test(telefono)) {
+        alert("El teléfono debe contener solo números y tener al menos 10 dígitos.");
+        return false;
+      }
 
-  // Validar que las contraseñas tengan una longitud mínima de 8 caracteres y contengan al menos un número
-  var contraseñaRegex = /^(?=.*[0-9]).{8,}$/;
-  if (!contraseñaRegex.test(contraseña)) {
-    alert("La contraseña debe tener al menos 8 caracteres y contener al menos un número.");
-    return false;
-  }
+      // Validar que las contraseñas tengan una longitud mínima de 8 caracteres y contengan al menos un número
+      var contraseñaRegex = /^(?=.*[0-9]).{8,}$/;
+      if (!contraseñaRegex.test(contraseña)) {
+        alert("La contraseña debe tener al menos 8 caracteres y contener al menos un número.");
+        return false;
+      }
 
-  // Validar que las contraseñas coincidan
-  if (contraseña !== confirmar_contraseña) {
-    alert("Las contraseñas no coinciden.");
-    return false;
-  }
+      // Validar que las contraseñas coincidan
+      if (contraseña !== confirmar_contraseña) {
+        alert("Las contraseñas no coinciden.");
+        return false;
+      }
 
-  // Validar que el nombre solo contenga letras y espacios
-  var nombreRegex = /^[A-Za-z\s]+$/;
-  if (!nombreRegex.test(nombre)) {
-    alert("El nombre solo debe contener letras y espacios.");
-    return false;
-  }
+      // Validar que el nombre solo contenga letras y espacios
+      var nombreRegex = /^[A-Za-z\s]+$/;
+      if (!nombreRegex.test(nombre)) {
+        alert("El nombre solo debe contener letras y espacios.");
+        return false;
+      }
 
-  // Si todas las validaciones pasan, se mostrará el mensaje de "Usuario registrado"
-  alert("Usuario registrado");
-  cerrarFormularioRegistro(); // Cerrar el formulario de registro
-  return true;
-  }
+      // Si todas las validaciones pasan, se mostrará el mensaje de "Usuario registrado"
+      alert("Usuario registrado");
+      cerrarFormularioRegistro(); // Cerrar el formulario de registro
+      return true;
+    }
 
-function validarLogin() {
-  var correo = document.getElementById("correo").value;
-  var contraseña_login = document.getElementById("contraseña_login").value;
+    function validarLogin() {
+      var correo = document.getElementById("correo").value;
+      var contraseña_login = document.getElementById("contraseña_login").value;
 
-  // Verificar que ambos campos estén llenos
-  if (correo === "" || contraseña_login === "") {
-    alert("Por favor, llene todos los campos.");
-    return false;
-  }
+      // Verificar que ambos campos estén llenos
+      if (correo === "" || contraseña_login === "") {
+        alert("Por favor, llene todos los campos.");
+        return false;
+      }
 
-  // Validar que el correo tenga un formato válido
-  var correoRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-  if (!correoRegex.test(correo)) {
-    alert("Por favor, ingrese un correo válido.");
-    return false;
-  }
+      // Validar que el correo tenga un formato válido
+      var correoRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      if (!correoRegex.test(correo)) {
+        alert("Por favor, ingrese un correo válido.");
+        return false;
+      }
 
-  // Validar que la contraseña en el formulario de inicio de sesión tenga una longitud mínima de 8 caracteres
-  if (contraseña_login.length < 8) {
-    alert("La contraseña debe tener al menos 8 caracteres.");
-    return false;
-  }
+      // Validar que la contraseña en el formulario de inicio de sesión tenga una longitud mínima de 8 caracteres
+      if (contraseña_login.length < 8) {
+        alert("La contraseña debe tener al menos 8 caracteres.");
+        return false;
+      }
 
-  // Si todas las validaciones pasan, se mostrará el mensaje de "Acceso concedido"
-  alert("Acceso concedido");
-  cerrarFormularioLogin(); // Cerrar el formulario de login
-  return true;
-}
+      // Si todas las validaciones pasan, se mostrará el mensaje de "Acceso concedido"
+      alert("Acceso concedido");
+      cerrarFormularioLogin(); // Cerrar el formulario de login
+      return true;
+    }
+  </script>
 
-
-</script>
-<div id="openModal" class="modalDialog">
-  <div>
-    <a href="#close" title="Close" class="close">X</a>
-    <h2>Nos ubicamos</h2>
-    <p>Calle siempre viva.</p>
-    <p>oficina 777 providencia, santiago Chile.</p>
+  <div id="openModal" class="modalDialog">
+    <div>
+      <a href="#close" title="Close" class="close">X</a>
+      <h2>Nos ubicamos</h2>
+      <p>Calle siempre viva.</p>
+      <p>Oficina 777 Providencia, Santiago Chile.</p>
+    </div>
+  </div>
+  <div class="a1">
+    <a href="#openModal" type="button" class="btn btn-primary">contacto</a>
   </div>
 </div>
 <div class="a1">
@@ -366,38 +389,38 @@ function validarLogin() {
   <a class="btn btn-primary" href="{% url 'producto1' %}">Admin</a>
 </div>
 
+  <!-- Elemento para mostrar la fecha y hora -->
+  <div id="currentDateTime"></div>
 
+  <!-- Script para actualizar la fecha y hora -->
+  <script>
+    function getCurrentDateTime() {
+      const now = new Date();
+      const options = {
+        year: 'numeric',
+        month: 'numeric',
+        day: 'numeric',
+        hour: 'numeric',
+        minute: 'numeric',
+        second: 'numeric',
+        hour12: false
+      };
+      return now.toLocaleString('es-ES', options);
+    }
 
-<!-- Elemento para mostrar la fecha y hora -->
-<div id="currentDateTime"></div>
+    function updateDateTime() {
+      const currentDateTime = getCurrentDateTime();
+      document.getElementById('currentDateTime').innerText = 'Fecha y hora actual: ' + currentDateTime;
+    }
 
-<!-- Script para actualizar la fecha y hora -->
-<script>
-  function getCurrentDateTime() {
-    const now = new Date();
-    const options = {
-      year: 'numeric', month: 'numeric', day: 'numeric',
-      hour: 'numeric', minute: 'numeric', second: 'numeric',
-      hour12: false // Formato de 24 horas
-    };
-    return now.toLocaleString('es-ES', options);
-  }
+    setInterval(updateDateTime, 1000);
+    updateDateTime();
+  </script>
 
-  function updateDateTime() {
-    const currentDateTime = getCurrentDateTime();
-    document.getElementById('currentDateTime').innerText = 'Fecha y hora actual: ' + currentDateTime;
-  }
-
-  // Actualizar la fecha y hora cada segundo
-  setInterval(updateDateTime, 1000);
-
-  // Actualizar la fecha y hora al cargar la página
-  updateDateTime();
-</script>
-
-<footer>
-  <hr>
-  <p style="text-align: center;">© 2024 Todos los derechos reservados.</p>
-</footer>
+  <footer class="footer">
+    <hr>
+    <p style="text-align: center;">© 2024 Todos los derechos reservados.</p>
+  </footer>
 </body>
+
 </html>
